--- a/tctest/tcapp/templates/registration/detail.html
+++ b/tctest/tcapp/templates/registration/detail.html
@@ -2,5 +2,5 @@
 {% load bootstrap3 %}
 
 {% block body_block %}
-  <h1>Click for details of <a href="{% url 'tcapp:detailview' pk=user.pk %}">{{user.username}}</a></h1>
+  <h1>Click for details of <a href="{% url 'tcapp:detailview' pk=user.pk %}">{{user.first_name}}</a></h1>
 {% endblock %}
